# jun-hackathon-2023

./: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prod.sh  pyproject.toml  run.sh  svelte.config.js  tailwind.config.ts
client/: .gitignore  .prettierrc  Dockerfile  package.json  pnpm-lock.yaml  run.js  svelte.config.js  tailwind.config.ts
client/scripts/: openapi.ts  run.js
client/src/: app.html
client/src/lib/: api.ts  hooks.ts  index.ts  type.ts  utils.ts
client/src/lib/components/: Element.svelte  ElementController.svelte  ImageElement.svelte  ShapeElement.svelte  TextElement.svelte  TextElementController.svelte
client/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
proxy/: nginx.conf  nginx.prod.conf
server/: .gitignore  Dockerfile  Makefile  database.sql  pyproject.toml  run.sh
server/server/: db.py  main.py
showcase/: Canvas Color.mov  Clear Canvas.webm  Export File.webm  Image Element.webm  Persistent Canvas.webm  Shape Element.webm  Text Element.webm
src/: app.html
src/lib/: hooks.ts
src/lib/components/: Element.svelte  TextElement.svelte
src/lib/components/icons/: Eraser.svelte  Image.svelte  Opacity.svelte  Pdf.svelte  Plus.svelte  Png.svelte  Shape.svelte  TextRight.svelte  Tt.svelte  Underline.svelte  Upload.svelte
src/lib/components/sidebar/: BackgroundController.svelte  ExportPopover.svelte  Sidebar.svelte
src/lib/components/topbar/: ElementController.svelte  OpacityPopover.svelte  ShapeColorController.svelte  ShapeElementController.svelte  TextAlign.svelte  TextCheckbox.svelte  TextColorController.svelte  Topbar.svelte
src/routes/: +layout.svelte  +page.server.ts
(+21 files in other folders)
